@@ -1,0 +1,2 @@
+/* Complex declarations */
+static void (* const(ScanAction[5][5]))(void *)= {};
